--- a/views/login.html
+++ b/views/login.html
@@ -10,86 +10,99 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
   </head>
   <body>
-    <div class="container-fluid p-5 bg-primary text-white text-center"><h1>API Abuse Example</h1></div>
-    <div class="container mt-5 border p-2">
-      <h1 class="ul">Simple Login API</h1>
-      <hr />
-      <div class="row">
-        <div class="col-sm-6">
-          <form id="loginFormOne">
-            <div class="mb-3 row">
-              <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
-              <div class="col-sm-10">
-                <input type="text" class="form-control" id="emailOne" name="email" value="yash@gmail.com" />
+    <div class="container-fluid p-5 bg-primary text-white text-center">
+      <h1>API Abuse Example</h1>
+      <h3>Attack Example</h3>
+    </div>
+    <div class="container mb-5">
+      <div class="container mt-5 border p-2">
+        <h1 class="ul">Simple Login API</h1>
+        <hr />
+        <div class="row">
+          <div class="col-sm-6">
+            <form id="loginFormOne">
+              <div class="mb-3 row">
+                <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
+                <div class="col-sm-10">
+                  <input type="text" class="form-control" id="emailOne" name="email" value="yash@gmail.com" />
+                </div>
               </div>
-            </div>
-            <div class="mb-3 row">
-              <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
-              <div class="col-sm-10">
-                <input type="text" class="form-control" id="passwordOne" name="password" value="123456" />
+              <div class="mb-3 row">
+                <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
+                <div class="col-sm-10">
+                  <input type="text" class="form-control" id="passwordOne" name="password" value="Yash1234$" />
+                </div>
               </div>
-            </div>
-            <div class="col-auto"><input type="submit" class="btn btn-primary mb-3" value="Submit" /></div>
-          </form>
-        </div>
-        <div class="col-sm-6">
-          <h3>Output of API Call</h3>
-          <div class="border p-2"><pre id="messageOne"></pre></div>
+              <div class="col-auto"><input type="submit" class="btn btn-primary mb-3" value="Submit" /></div>
+            </form>
+          </div>
+          <div class="col-sm-6">
+            <h3>Output of API Call</h3>
+            <div class="border p-2"><pre id="messageOne"></pre></div>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="container mt-5 border p-2">
-      <h1 class="ul">SQL Injection Login API</h1>
-      <hr />
-      <div class="row">
-        <div class="col-sm-6">
-          <form id="loginFormTwo">
-            <div class="mb-3 row">
-              <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
-              <div class="col-sm-10">
-                <input type="text" class="form-control" id="emailTwo" name="email" value="yash@gmail.com" />
+      <div class="container mt-5 border p-2">
+        <h1 class="ul">SQL Injection Login API</h1>
+        <hr />
+        <div class="row">
+          <div class="col-sm-6">
+            <form id="loginFormTwo">
+              <div class="mb-3 row">
+                <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
+                <div class="col-sm-10">
+                  <input type="text" class="form-control" id="emailTwo" name="email" value="yash@gmail.com" />
+                </div>
               </div>
-            </div>
-            <div class="mb-3 row">
-              <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
-              <div class="col-sm-10">
-                <input type="text" class="form-control" id="passwordTwo" name="password" value="'or'1=1" />
+              <div class="mb-3 row">
+                <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
+                <div class="col-sm-10">
+                  <input type="text" class="form-control" id="passwordTwo" name="password" value="'or'1=1" />
+                </div>
               </div>
-            </div>
-            <div class="col-auto"><input type="submit" class="btn btn-primary mb-3" value="Submit" /></div>
-          </form>
-        </div>
-        <div class="col-sm-6">
-          <h3>Output of API Call</h3>
-          <div class="border p-2"><pre id="messageTwo"></pre></div>
+              <div class="col-auto"><input type="submit" class="btn btn-primary mb-3" value="Submit" /></div>
+            </form>
+          </div>
+          <div class="col-sm-6">
+            <h3>Output of API Call</h3>
+            <div class="border p-2"><pre id="messageTwo"></pre></div>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="container mt-5 border p-2">
-      <h1 class="ul">Brute Force Attack Login API</h1>
-      <hr />
-      <div class="row">
-        <div class="col-sm-6">
-          <form id="loginFormThree">
-            <div class="mb-3 row">
-              <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
-              <div class="col-sm-10">
-                <input type="text" class="form-control" id="emailThree" name="email" value="yash@gmail.com" />
+      <div class="container mt-5 border p-2">
+        <h1 class="ul">Brute Force Attack Login API</h1>
+        <hr />
+        <div class="row">
+          <div class="col-sm-6">
+            <form id="loginFormThree">
+              <div class="mb-3 row">
+                <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
+                <div class="col-sm-10">
+                  <input type="text" class="form-control" id="emailThree" name="email" value="yash@gmail.com" />
+                </div>
               </div>
-            </div>
-            <div class="mb-3 row">
-              <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
-              <div class="col-sm-10">
-                <input type="text" class="form-control" id="passwordThree" name="password" value="'or'1=1" />
+              <div class="mb-3 row">
+                <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
+                <div class="col-sm-10">
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="passwordThree"
+                    name="password"
+                    aria-label="Disabled input example"
+                    disabled
+                    readonly
+                  />
+                </div>
               </div>
-            </div>
-            <div class="col-auto"><input type="submit" class="btn btn-primary mb-3" value="Submit" /></div>
-            <p id="passwordCount"></p>
-          </form>
-        </div>
-        <div class="col-sm-6">
-          <h3>Output of API Call</h3>
-          <div class="border p-2"><pre id="messageThree"></pre></div>
+              <!-- <div class="col-auto"><input type="submit" class="btn btn-primary mb-3" value="Submit" /></div> -->
+              <p id="passwordCount"></p>
+            </form>
+          </div>
+          <div class="col-sm-6">
+            <h3>Output of API Call</h3>
+            <div class="border p-2"><pre id="messageThree"></pre></div>
+          </div>
         </div>
       </div>
     </div>
