--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -5,6 +5,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .title a {
@@ -63,8 +66,8 @@
 .card:hover,
 .card:focus,
 .card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+  color: #000;
+  border-color: #000;
 }
 
 .card h3 {
@@ -104,11 +107,11 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  opacity: 0.8;
 }
 
 /* Position text in the middle of the page/image */
 .bgText {
   position: absolute;
-  color: white;
   z-index: 2;
 }
